# jescore

./: .gitignore  CHANGELOG.md  README.md  jescore.sh  library.json  platformio.ini
.github/: FUNDING.yml
.github/workflows/: workflow.yml
examples/: example_blink.cpp  example_blink_stm32.c  example_blink_stm32g431.c  example_blink_stm32h753.c  example_blink_stm32l476.c  example_fsm_cli.cpp  example_sync_async.cpp
include/: board_parser.h  example_selector.h
include/FreeRTOSConfig/: FreeRTOSConfig.h
jescore/: common.py  jescore  jescore.bat  jescore.py
jescore_cli/: README.md  pyproject.toml
jescore_cli/jescore_cli/: common.py  jescore_cli.py
jescore_cli/tests/: test_cli.py
lib/base_jobs/: base_jobs.c  base_jobs.cpp  base_jobs.h
lib/cli/: cli.c  cli.cpp  cli.h  print_utils.cpp  print_utils.h
lib/commands/: commands.h
lib/core/: core.c  core.cpp  core.h
lib/err/: err.cpp  err.h
lib/jes_err/: jes_err.h
lib/jescore/: jescore.cpp  jescore.h  jescore_api.cpp
lib/jescore_api/: jescore_api.c  jescore_api.cpp  jescore_api.h
lib/job_driver/: job_driver.c  job_driver.cpp  job_driver.h
lib/job_names/: base_job_names.h  core_job_names.h  job_names.h
lib/jobs/: jobs.cpp  (+1 more)
scripts/: build_time_macros.py  freertos_linking.py  jescore_linking.py
src/: example_blink.cpp  example_blink_stm32.c  example_fsm_cli.cpp  jescore.h  main.cpp
test/: common_test.c  common_test.cpp  common_test.h  test_api_functions.c  test_api_functions.cpp  test_core_startup.c  test_core_startup.cpp  test_runner.c  test_runner.cpp  test_runner_arduino.cpp  unity_config.c
(+14 files in other folders)
