[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jescore_cli"
version = "1.0.0"
description = "CLI for jes-core serial communication"
authors = [
    { name = "jake-is-ESD-protected", email = "jake@jesdev.io" }
]
dependencies = ["pyserial", "pytest"]

[project.urls]
"Homepage" = "https://jesdev.io"

[project.scripts]
jescore = "jescore_cli.jescore_cli:main"
